{
    "name": "Controls",
    "maps": [
        {
            "name": "Move",
            "id": "d37c7d54-de33-4ae0-976d-c96ce50e1ae9",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "deeca997-8315-479d-871d-24a760f75b02",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "559a0aea-804f-4150-a529-b30720e20bb7",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "bb8efd99-03ae-4671-81d2-4b31c459e4aa",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Hero",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "974f70ad-a531-42a6-8dd5-24a4d29cf324",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Hero",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "7f1396b3-2762-4087-8f80-1e914074cd98",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Hero",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "3c7eb92a-1333-4aa5-a769-69a0f10a8483",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Hero",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Rotate",
            "id": "7a5c6fbf-d50b-43a5-a89c-2e0a3164150a",
            "actions": [
                {
                    "name": "RotateAround",
                    "type": "Value",
                    "id": "f76cf928-3544-43d6-af49-ca6a66c98b80",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c5d68274-2d8b-45a4-ac8d-c70a559fe44f",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Hero",
                    "action": "RotateAround",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Fire",
            "id": "bd881f5d-6dbe-49e7-907c-dd23f5ff12d3",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "be6f5466-fecd-4292-a468-19c229aee11d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7c36c6e2-134c-4f22-b7f1-864a4d969b45",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Hero",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "5cb96964-7df9-4862-9c04-c67c2e1249ed",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "aa835fc2-ae67-4d6c-b7fe-d5cab4da142f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2d1317f0-7657-487c-ad3c-143e1046a2d7",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "HUD",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Hero",
            "bindingGroup": "Hero",
            "devices": []
        },
        {
            "name": "HUD",
            "bindingGroup": "HUD",
            "devices": []
        }
    ]
}